# magents

./: .env.example  main.py  pyproject.toml
src/1_introduction/: 1_first_llm_call.ipynb  2_model_comparison_&_json_outputs.ipynb  3_rag_&_tools_101.ipynb  4_vectors_&_embeddings.ipynb
src/1_introduction/data/: summary.md
src/2_agents_sdk/: 1_agents_introduction.ipynb  2_decentralised_orchestration.ipynb  3_deep_research_agents.ipynb
src/3_crew_ai/one_crew_of_agents/: .env.example  README.md  pyproject.toml
src/3_crew_ai/one_crew_of_agents/src/one_crew_of_agents/: crew.py  main.py
src/3_crew_ai/one_crew_of_agents/src/one_crew_of_agents/config/: agents.yaml  tasks.yaml
src/3_crew_ai/one_crew_of_agents/src/one_crew_of_agents/tools/: email_tool.py
src/3_crew_ai/three_engineering_team/: .env.example  README.md  pyproject.toml
src/3_crew_ai/three_engineering_team/src/three_engineering_team/: crew.py  main.py
src/3_crew_ai/three_engineering_team/src/three_engineering_team/config/: agents.yaml  tasks.yaml
src/3_crew_ai/two_stock_picker/: README.md
src/3_crew_ai/two_stock_picker/src/two_stock_picker/: crew.py
src/3_crew_ai/two_stock_picker/src/two_stock_picker/config/: agents.yaml  tasks.yaml
src/4_langgraph/: 1_intro_to_graphs.ipynb  2_web_browsing_agent.ipynb  3_lead_scoring_workflow.ipynb
