[project]
name = "magents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.46.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.31",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.10",
    "langsmith>=0.4.34",
    "openai>=1.107.2",
    "openai-agents>=0.3.1",
    "pypdf>=6.0.0",
    "pyppeteer>=2.0.0",
    "resend>=2.13.1",
]
