[project]
name = "one_crew_of_agents"
version = "0.1.0"
description = "one_crew_of_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "resend>=2.15.0",
]

[project.scripts]
one_crew_of_agents = "one_crew_of_agents.main:run"
run_crew = "one_crew_of_agents.main:run"
train = "one_crew_of_agents.main:train"
replay = "one_crew_of_agents.main:replay"
test = "one_crew_of_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
