[project]
name = "three_engineering_team"
version = "0.1.0"
description = "three_engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "gradio>=5.49.0",
    "resend>=2.15.0",
]

[project.scripts]
three_engineering_team = "three_engineering_team.main:run"
run_crew = "three_engineering_team.main:run"
train = "three_engineering_team.main:train"
replay = "three_engineering_team.main:replay"
test = "three_engineering_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
